commit	modified:   seashop/db.sqlite3 commit	modified: seashop/dbnew file:   seashop/static/uploads/products/GIACN315-3-400x600.jpg commit	modified: seashop/dbnew file:   seashop/static/uploads/products/GIACN315-3.jpg commit	modified: seashop/dbnew file:   seashop/static/uploads/products/GIACN316-2.jpg commit	modified: seashop/dbnew file: se   seashop/static/uploads/products/VDOTK301-6.jpg commit	modified: seashop/dbnew file:   seashop/static/uploads/products/VNGTK304-4.jpg commit	modified:   seashop/store/admin.py commit	modified:   seashop/store/templates/index.html commit	modified:   seashop/store/templatetags/product.py commit	modified: seashop/

--- a/seashop/store/templates/index.html
+++ b/seashop/store/templates/index.html
@@ -33,9 +33,8 @@
   <h1><a href="">Sản Phẩm Bán Chạy</a></h1>
 </div>
 <div class="container-fluid">
-  <div class="product-content">
     {%for x in prt%}
-    {%if forloop.counter|countprt:prt %}
+    {%if forloop.counter0|countprt%}
       </div>
       <div class="product-content"> 
  {%endif%} 
@@ -49,12 +48,9 @@
         <div class="price">{{x.price}}</div>
       </figcaption>
     </div>
-       {%if forloop.counter == 8%}
-      </div>
-      {%endif%} 
     {%endfor%} 
   </div>
-{% comment %} </div> {% endcomment %}
+
 
 <div class="spbc">
   <h1><a href="">Hàng Mới Về</a></h1>
