--- a/seashop/static/css/style.css
+++ b/seashop/static/css/style.css
@@ -4,11 +4,11 @@ html::-webkit-scrollbar {
 }
 html::-webkit-scrollbar-thumb{
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
   background-color: silver;
 }
 html::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
   /*border-radius: 10px;*/
   background-color: #F5F5F5;
 }
@@ -1457,7 +1457,6 @@ label {
 }
 
 
-
 .sidenav .menu{
   width: 100%;
   margin-top: 30px;
@@ -1579,5 +1578,10 @@ label {
     text-shadow: none;
 }
 
+a.remove:hover{
+    border-style: solid;
+    border-color: red;
+    color:white;
+}
 
 
