--- a/seashop/store/templates/customer/customer.html
+++ b/seashop/store/templates/customer/customer.html
@@ -1,7 +1,58 @@
 {%extends 'base.html'%}{%load static%}{%block content %}
 
+<div id="article">
+	<div class="container-fluid">
+		<div class="row breadcrumb-shop">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pd5 blog-breadcrumb">
+                		<ol class="breadcrumb breadcrumb-arrows">
+					<li><a href="">Trang chủ</a></li> / <li>Tài Khoản</li></nav>	
+               			</ol>
+			</div>
+		</div>
+		<br>
+		<div class="content-page">	
+		<div class="woocommerce">
+<nav class="woocommerce-MyAccount-navigation" style="width:20%;float:left">
+	<ul>
+		<li class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--dashboard is-active">
+				<a href="">Trang tài khoản</a>
+		</li>
+		<li class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--orders">
+				<a href="">Đơn hàng</a>
+		</li>
+		<li class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--downloads">
+				<a href="">Tải xuống</a>
+		 </li>
+		<li class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--edit-address">
+				<a href="">Địa chỉ</a>
+		</li>
+		<li class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--edit-account">
+				<a href="">Tài khoản</a>
+		</li>
+		<li class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--customer-logout">
+				<a href="/logout">Thoát</a>
+		</li>
+	</ul>
+</nav>
 
-Hello,{{user}}
+<div class="woocommerce-MyAccount-content" style="display: inline-block;
+    float: left;
+    margin-left: 5%;
+    width: 75%;
+}">
+	<div class="woocommerce-notices-wrapper"></div>
+<p>
+	Xin chào <strong>{{user}}</strong> (không phải tài khoản <strong>{{user}}</strong>? Hãy <a href="">thoát ra</a> và đăng nhập vào tài khoản của bạn)</p>
+
+<p>
+	Từ trang quản lý tài khoản bạn có thể xem <a href="">đơn hàng mới</a>, quản lý <a href="">địa chỉ giao hàng và thanh toán</a>, and <a href="https://360boutique.vn/tai-khoan/edit-account/">sửa mật khẩu và thông tin tài khoản</a>.</p>
+
+</div>
+</div>
+		</div>
+	</div>
+</div>
+
 
 
 {%endblock%}
