commit	modified:   seashop/db.sqlite3 commit	deleted:    seashop/db.sqlite3-journal commit	modified:   seashop/seashop/settings.py commit	modified:   seashop/static/css/style.css commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_0JPveoZ.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_0JPveoZ_xAp5bFY.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_Jp2oOX6.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_QEUCCCN.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_QEUCCCN_Bd7Mnkw.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_QEUCCCN_zEU4EjH.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_WIgeASf.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_WIgeASf_AiO593n.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_WIgeASf_AiO593n_EoLPNS3.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_WIgeASf_AiO593n_EoLPNS3_GschXhG.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_WIgeASf_SkQyn23.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_rDHFnwh.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_rDHFnwh_5HLfi1R.jpg commit	deleted:    seashop/static/uploads/products/ALECN205-6-400x600_rDHFnwh_Wq4CMUP.jpg commit	deleted:    seashop/static/uploads/products/CAPCN323-4-400x600.jpg commit	deleted:    seashop/static/uploads/products/GIACN315-3-400x600.jpg commit	deleted:    seashop/static/uploads/products/GIACN316-2.jpg commit	deleted:    seashop/static/uploads/products/MLTTK305-1.jpg commit	deleted:    seashop/static/uploads/products/STNTK327-QKLTK308-1-400x600.jpg commit	deleted:    seashop/static/uploads/products/STNTK327-QKLTK308-1-400x600_Pr7qynu.jpg commit	deleted:    seashop/static/uploads/product

--- a/seashop/static/css/style.css
+++ b/seashop/static/css/style.css
@@ -1623,7 +1623,7 @@ a.remove:hover {
   color: white;
 }
 
-/* .wc-forward {
+a.checkout-button.button.alt.wc-forward {
   background-color: #000 !important;
   border-radius: 0 !important;
   color: #fff !important;
@@ -1633,4 +1633,14 @@ a.remove:hover {
   padding: 0 !important;
   text-align: center;
   width: 100%;
-} */
+}
+button.remove{
+  background-color: white;
+  border: 0px;
+  box-shadow: 0px 1px 1px #fff inset;
+  border-radius:50%;
+}
+
+button.remove:hover{
+  background-color: red;
+}
