commit 	modified:   seashop/db.sqlite3 commit 	new file:   seashop/static/uploads/products/CAPCN323-4-400x600.jpg commit 	new file:   seashop/static/uploads/products/GIACN315-3_O9u6jLV.jpg commit 	new file:   seashop/static/uploads/products/MLTTK305-1.jpg commit 	new file:   seashop/static/uploads/products/STNTK327-QKLTK308-1-400x600.jpg commit 	new file:   seashop/static/uploads/products/VDOTK301-6.jpg commit 	new file:   seashop/static/uploads/products/VNGTK304-4.jpg commit 	modified:   seashop/store/admin.py commit 	modified:   seashop/store/migrations/0001_initial.py commit 	new file:   seashop/store/migrations/0002_alter_invoice_date_alter_size_size.py commit 	deleted:    seashop/store/migrations/0002_cart_amount.py commit 	new file:   seashop/store/migrations/0003_invoice_name_alter_invoice_date.py commit 	new file:   seashop/store/migrations/0004_customer_phone_invoice_email_invoice_phone_and_more.py commit 	new file:   seashop/store/migrations/0005_alter_customer_phone_alter_invoice_date.py commit 	new file:   seashop/store/migrations/0006_alter_invoice_date.py commit 	new file:   seashop/store/migrations/0007_rename_address_conscious_invoice_city_and_more.py commit 	new file:   seashop/store/migrations/0008_alter_invoice_date.py commit 	modified:   seashop/store/models/customer/customers.py commit 	modified:   seashop/store/models/customer/invoicedetail.py commit 	modified:   seashop/store/models/customer/invoices.py commit 	modified:   seashop/store/models/products/productdetail.py commit 	modified:   seashop/store/models/products/sizes.py commit 	modified:   seashop/store/templates/base.html commit 	modified:   seashop/store/templates/customer/cart.html commit 	modified:   seashop/store/templates/customer/pay.html commit 	modified:   seashop/store/templates/index.html commit 	modified:   seashop/store/templates/products/info.html commit 	modified:   seashop/store/templatetags/product.py commit 	modified:   seashop/store/urls.py commit 	modified:   seashop

--- a/seashop/store/templates/base.html
+++ b/seashop/store/templates/base.html
@@ -86,7 +86,7 @@
               <h3><a href="/?category=Ao Nam">Áo Nam</a></h3>
               <a href="/?categorydetail=Ao Polo">Áo Polo</a>
               <a href="/?categorydetail=Ao Phong">Áo Phông</a>
-              <a href="/?categorydetail=Ao So Mi Dai Tay">Áo SƠ Mi Dài Tay</a>
+              <a href="/?categorydetail=Ao So Mi Dai Tay">Áo Sơ Mi Dài Tay</a>
               <a href="/?categorydetail=Ao So Mi Ngan Tay">Áo Sơ Mi Ngắn Tay</a>
               <a href="/?categorydetail=Ao Ni">Nỉ</a>
               <a href="/?categorydetail=Ao Khoac">Khoác</a>
